# IM-CRM

./: .env  .gitignore  CLAUDE.md  README.md  SETUP.md  crm_mvp_feature_list.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.changelog/: v0.10.0.md  v0.11.0.md  v0.11.1.md  v0.11.2.md  v0.11.3.md  v0.11.4.md  v0.12.0.md  v0.12.1.md  v0.12.10.md  v0.12.11.md  v0.12.12.md  v0.12.13.md  v0.12.14.md  v0.12.15.md  v0.12.16.md  v0.12.17.md  v0.12.18.md  v0.12.19.md  v0.12.2.md  v0.12.20.md  v0.12.21.md  v0.12.22.md  v0.12.23.md  v0.12.3.md  v0.12.4.md  v0.12.5.md  v0.12.6.md  v0.12.7.md  v0.12.8.md  v0.12.9.md  v0.13.0.md  v0.14.0.md  v0.14.1.md  v0.15.0.md  v0.15.1.md  v0.15.2.md  v0.16.0.md  v0.16.1.md  v0.16.2.md  v0.16.3.md  (+473 more)
.claude/: settings.local.json
.github/workflows/: build.yml  test.yml
docs/: d365-schema.md  opportunity-flow-spec.md
docs/help/: activities.md  analytics.md  arr-overview.md  contacts.md  customers.md  follow-ups.md  getting-started.md  opportunities.md  revenue-overview.md  settings.md  shortcuts.md  sync.md  timeline.md  today.md
docs/powerbi-schema/: TMSCHEMA_COLUMNS.csv  TMSCHEMA_MEASURES.csv  TMSCHEMA_RELATIONSHIPS.csv  TMSCHEMA_TABLES.csv
scripts/: download-ollama.js  download-ollama.mjs  generate-powerbi-schema.mjs  sync-version.js  validate-d365-schema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  oauth.rs
src/__tests__/: security.test.ts  (+2 more)
(+376 files in other folders)
