[package]
name = "crm-mvp"
version = "0.12.11"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = { version = "2" }
tauri-plugin-updater = { version = "2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-fs = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
