[package]
name = "crm-mvp"
version = "0.37.18"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = { version = "2" }
tauri-plugin-updater = { version = "2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-fs = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-shell = "2"
tiny_http = "0.12"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
